--- a/ta-lib/c/CMakeLists.txt
+++ b/ta-lib/c/CMakeLists.txt
@@ -1,12 +1,5 @@
-
-#SET(TA_LIB_FLAGS "")
-#SET(TA_LIB_INCLUDE_DIRS "")
-#SET(TA_LIB_LIBRARY_DIRS "")
-#SET(TA_LIB_LIBRARIES "")
-
-SET(LIBRARY_OUTPUT_PATH ${ta-lib_BINARY_DIR}/lib/ CACHE PATH "Single out dir for all libs" FORCE)
-SET(TA_LIB_LIBRARY_DIRS lib)
-LINK_DIRECTORIES(${ta-lib_BINARY_DIR}/lib)
+# SET(LIBRARY_OUTPUT_PATH ${ta-lib_BINARY_DIR}/lib/ CACHE PATH "Single out dir for all libs" FORCE)
+# SET(TA_LIB_LIBRARY_DIRS lib)
 
 #SET(priv_HEADERS
 #	${ta-lib_SOURCE_DIR}/c/src/ta_abstract/ta_frame_priv.h
@@ -234,22 +227,22 @@ SET(ta-lib_CSOURCES
 	${ta-lib_SOURCE_DIR}/c/src/ta_abstract/tables/table_m.c
 )
 
-IF(UNIX)
-	ADD_LIBRARY(ta_lib SHARED ${ta-lib_CSOURCES})
-	SET_TARGET_PROPERTIES(ta_lib PROPERTIES SOVERSION ${TA_LIB_VERSION_FULL} DEFINE_SYMBOL TA_LIB_SHARED)
-	ADD_LIBRARY(ta_lib_static STATIC ${ta-lib_CSOURCES})
-	SET_TARGET_PROPERTIES(ta_lib_static PROPERTIES OUTPUT_NAME ta_lib)
-ENDIF(UNIX)
+IF(NOT UNIX)
+	MESSAGE(SEND_ERROR "Not yet implemented")
+ENDIF()
 
-IF(WIN32)
-	INCLUDE(GenerateExportHeader)
-	ADD_LIBRARY(ta_lib SHARED ${ta-lib_CSOURCES})
-	SET_TARGET_PROPERTIES(ta_lib PROPERTIES DEFINE_SYMBOL TA_LIB_SHARED)
-	ADD_LIBRARY(ta_lib_static STATIC ${ta-lib_CSOURCES})
-	SET_TARGET_PROPERTIES(ta_lib_static PROPERTIES OUTPUT_NAME ta_lib_a)
-ENDIF(WIN32)
+# Shared library
+ADD_LIBRARY(ta_lib SHARED ${ta-lib_CSOURCES})
+TARGET_INCLUDE_DIRECTORIES(ta_lib PUBLIC ${ta-lib_SOURCE_DIR}/c/include)
+TARGET_LINK_LIBRARIES(ta_lib PUBLIC)
+SET_TARGET_PROPERTIES(ta_lib PROPERTIES SOVERSION ${TA_LIB_VERSION_FULL} DEFINE_SYMBOL TA_LIB_SHARED)
 
-SET_TARGET_PROPERTIES(ta_lib PROPERTIES SOVERSION ${TA_LIB_VERSION_FULL})
+# Static library
+ADD_LIBRARY(ta_lib_static STATIC ${ta-lib_CSOURCES})
+TARGET_INCLUDE_DIRECTORIES(ta_lib_static PUBLIC ${ta-lib_SOURCE_DIR}/c/include)
+TARGET_LINK_LIBRARIES(ta_lib_static PUBLIC)
+SET_TARGET_PROPERTIES(ta_lib_static PROPERTIES OUTPUT_NAME ta_lib)
+SET_TARGET_PROPERTIES(ta_lib_static PROPERTIES SOVERSION ${TA_LIB_VERSION_FULL})
 
 INSTALL(FILES ${ta-lib_HEADERS} DESTINATION include/ta-lib)
 INSTALL(TARGETS ta_lib ta_lib_static DESTINATION lib)
